--- a/web/style.css
+++ b/web/style.css
@@ -2,6 +2,15 @@ body {
 	font-family: 'Open Sans', serif;
 }
 
+a {
+	color: #fff;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 #wrapper {
 	width: 95%;
 	margin: 0 auto;
@@ -16,7 +25,7 @@ body {
 #menu {
 	height: 30px;
 	width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: 50px;
 	background-color: #1B56E0;
 	color: #fff;
 	float: left;
@@ -38,4 +47,62 @@ body {
 #content {
 	width: 100%;
 	float: left;
+	padding-left: 5px;
+}
+
+#content a {
+	color: #333;
+}
+
+.info {
+	border: 1px solid #eee;
+	float: left;
+	margin-right: 40px;
+}
+
+.info table tr th {
+	padding: 10px;
+	border-bottom: 1px solid #eee;
+	font-weight: normal;
+	color: #666;
+	font-size: 10pt;
+	text-align: left;
+	text-transform: uppercase;
+}
+
+.info table tr td {
+	padding: 5px;
+}
+
+.info-title {
+	background-color: #eee;
+	padding: 10px;
+}
+
+.submenu-button {
+	margin-bottom: 10px;
+	float: left;
+}
+
+.information, .success, .warning, .error, .validation {
+    border: 1px solid;
+    margin-bottom: 10px;
+    padding:7px 7px 7px 7px;
+}
+.information {
+    color: #00529B;
+    background-color: #BDE5F8;
+}
+
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+.warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+.error {
+    color: #D8000C;
+    background-color: #FFBABA;
 }
