changed status when dimming and added footer

--- a/web/style.css
+++ b/web/style.css
@@ -11,6 +11,13 @@ a:hover {
 	text-decoration: underline;
 }
 
+#footer {
+	width: 500px;
+	margin: 0 auto;
+	text-align: center;
+	color: #aaa;
+}
+
 #wrapper {
 	width: 95%;
 	margin: 0 auto;
